--- a/pictab/assets/index.html
+++ b/pictab/assets/index.html
@@ -15,5 +15,6 @@
         <div id="photo-bg"></div>
         <div id="photo"></div>
         <div id="current-time"></div>
+        <div id="new-photo"><button class="button">Új Kép</button></div>
     </body>
 </html>
