--- a/pictab/assets/index.html
+++ b/pictab/assets/index.html
@@ -16,5 +16,6 @@
         <div id="photo"></div>
         <div id="current-time"></div>
         <div id="new-photo"><button class="button">Új Kép</button></div>
+        <div id="photo-path"></div>
     </body>
 </html>
