--- a/pictab/assets/starred_photos.html
+++ b/pictab/assets/starred_photos.html
@@ -7,15 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
+        <script src="starred_photos.js"></script>
 
         <!-- Place favicon.ico in the root directory -->
     </head>
     <body>
-        <div id="photo-bg"></div>
-        <div id="photo"></div>
-        <div id="current-time"></div>
-        <div id="new-photo"><button class="button">Új Kép</button></div>
-        <div id="photo-path"></div>
+        <div id="photo-list"></div>
     </body>
 </html>
