link to remove from starred

--- a/pictab/assets/starred_photos.html
+++ b/pictab/assets/starred_photos.html
@@ -12,6 +12,10 @@
         <!-- Place favicon.ico in the root directory -->
     </head>
     <body>
+        <div id="menu">
+            <p>Megjelölt Képek</p>
+            <a href="/">&larr; Kezdőlap</a>
+        </div>
         <div id="photo-list"></div>
     </body>
 </html>
